# talk2pdf

./: .gitignore  LICENSE  README.md  config.py  ffmpeg.py  frames.py  openai_cache.py  pyproject.toml  talk2pdf.py  transcribe.py  utils.py  ytdlp.py
.github/workflows/: python-app.yml
docs/: arch.odp
requirements/: dev.txt  prod.txt
talk2pdf/: __main__.py  config.py  ffmpeg.py  openai_cache.py  t2p_whisper.py  ytdlp.py
