[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "Carl Pearson", email = "me@carlpearson.net"},
]
dependencies = [
  "openai == 0.27",
  "pydub",
  "imagehash",
  "pillow",
  "openai-whisper",
]
name = "talk2pdf"
version = "0.3.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
]
description = ""
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Bug Tracker" = "https://github.com/cwpearson/talk2pdf/issues"
"Homepage" = "https://github.com/cwpearson/taslk2pdf"

[tool.setuptools.packages.find]
namespaces = false # only include folders with __init__.py
